[#2501] Fix regression where super scrollbar resize arrows do not expand when the inner container gets too small.

--- a/css/super-scrollbar.less
+++ b/css/super-scrollbar.less
@@ -185,7 +185,7 @@
 
 // Arrows - minimum size states
 // At 50px wide, force the arrows to the outside
-#butter-super-scrollbar-container.super-scrollbar-small:hover {
+#butter-super-scrollbar-inner-container.super-scrollbar-small:hover {
   #butter-super-scrollbar-handle-left .butter-super-arrow {
     left: -16px;
   }
